cleaned up tailwind css selectors, fixed buttons so they are not wrapped in anchors

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    .indexBtn {
+        @apply w-36 bg-primaryDark hover:bg-secondaryLight text-gray-800 font-bold py-2 px-4 rounded inline-flex items-center mx-2;
+    }
+}
+
+@layer components {
+    .navBtn {
+        @apply mx-3 px-1.5 hover:text-secondaryLight;
+    }
+}
